Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-7902

crash when deleting QTextEdit which has popup open

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 4.7.0
    • 4.6.1
    • None
    • openSuse 11.2, our customer reported this problem on Windows XP
    • b7af368e86874d71ffc9071c9ef009814d6a3467

    Description

      Attached program shows, that Qt crashes when a QTextEdit (it also happens with Q3TextEdit) has the context menu open, and the widget is destroyed during this.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dedietri Gabriel de Dietrich (drgvond)
            mkoller Martin Koller
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes